--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <!-- start search-->
         <div class="banner">
-		<div class="layer">
-            <p class="animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms"></p>
-			</div>
+            <div class="layer">
+                <p class="animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms"></p>
+            </div>
 
-            <h2 class="animated wow fadeInTop" data-wow-duration="1000ms" data-wow-delay="500ms" style="color:#F5FFFA;">Hello And Welcome To African Delites</h2>
+            <h2 class="animated wow fadeInTop" data-wow-duration="1000ms" data-wow-delay="500ms" style="color:#F5FFFA; background-color: black;">Hello And Welcome To African Delites</h2>
             <a class="scroll down" href="#content-down"><img src="images/down.png" alt=""></a>
         </div>
     </div>
@@ -248,7 +248,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="row">
                 <div class="footer-head col-md-12">
                     <div class="col-md-4 footer-bottom  animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">
-                        <h2  class="hearder-kat">Address</h2>
+                        <h2 class="hearder-kat">Address</h2>
                         <label><i class="glyphicon glyphicon-menu-up"></i></label>
                         <p>127 Victoria Street <br> Germiston
                         </p>
