--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <p class="animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms"></p>
             </div>
 
-            <h2 class="animated wow fadeInTop" data-wow-duration="1000ms" data-wow-delay="500ms" style="color:#F5FFFA; background-color: black;">Hello And Welcome To African Delites</h2>
+            <h2 class="animated wow fadeInTop" data-wow-duration="1000ms" data-wow-delay="500ms" style="color:#F5FFFA;">Hello And Welcome To African Delites</h2>
             <a class="scroll down" href="#content-down"><img src="images/down.png" alt=""></a>
         </div>
     </div>
