--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 
 <body>
-    <div class="header">
+    <div class="header" style="background:  url(../images/2.jpg) no-repeat left;">
         <div class="container">
             <div class="logo animated wow pulse" data-wow-duration="1000ms" data-wow-delay="500ms">
                 <a href="index.html"><img src="images/logo.png" alt=""><img src="images/oo.png" alt=""></a>
